summative.moria.Moria.scala.error
Erreur de compilation :
Moria:1: error: not found: value Direction
while(!(estFaceMur && getDirection()==Direction.EST)) {
                                      ^Moria:2: error: not found: value Direction
  setDirection(Direction.EST)
               ^