summative.moria.Moria.scala.code
while(!(estFaceMur && getDirection()==Direction.EST)) {
  setDirection(Direction.EST)
	while(!estSurBiscuit) {
  	avance()
	}
	prendBiscuit()
  retourne()
  while(!estSurBiscuit) {
  	avance()
  }
  recule(); poseBiscuit()
}
droite(); avance(); gauche(); avance()